================================


CHANGES - Current Version:
--------------------------

- Added implementation for OGRLayer::GetExtent() that returns extents 
  of the data, which is differents from the bounds of the projection.

- Added code to set TOWGS84 values for mitab_coordsys.cpp and 
  mitab_spatialref.cpp.  

  See http://bugzilla.remotesensing.org/show_bug.cgi?id=41


Version 1.1.0 - (2001-03-08)
----------------------------

- Modified mitab_imapinfofile.cpp so that variable width fields (nWidth=0)
  is translated to 254 characters, instead of 255 so it will actually be
  a legal field width in TAB.  (NFW)

- Make default and max char field with 254 chars in TABFile::AddFieldNative()

- Added a warning (TAB_WarningBoundsOverflow) on close of .MAP file if any 
  object was written with coordinates outside of the file's predefined 
  bounds.  (Causing an overflow of the +/-1e9 integer coord. range)

- Use MI defaults for Pen, Brush, Font, Symbol when creating new objects
  and when reading objects with no Pen, Brush, etc. set (used to just set
  everything to zero which was inconsistent with MI's behavior)
  New defaults are: PEN(1,2,0), BRUSH(2,16777215,16777215), 
  FONT("Arial",0,0,0), SYMBOL(35,0,12)

- Accept "TABLE TYPE LINKED" and handle them the same way as type NATIVE
  i.e. the link to the RDBMS is simply ignored.

- Added support for Swiss Oblique Mercator/Cylindrical. (NFW)

- Expand tabs (NFW)

- Added projection bounds lookup tables, automatically called by
  TABFile::SetProjInfo() (and SetSpatialRef() by the same way).
  TABFile::IsBoundsSet() can be used after setting projection to
  establish if some default bounds were found or not for the projection.

- Fixed IMapInfoFile::CreateFeature(), was leaking feature memory. (NFW)

- Fixed small memory leak in OGRTABDataSource::CreateLayer() (NFW)

- Support SpatialFilter inside IMapInfoFile::GetNextFeature().  
  TAB files should support spatial filter via their spatial index for 